fix: card background in dark mode

--- a/assets/scss/dark-theme.scss
+++ b/assets/scss/dark-theme.scss
@@ -82,6 +82,15 @@ body {
   color: var(--fg-secondary);
 }
 
+.card {
+  background: var(--bg-color);
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.4);
+}
+
+[data-theme="dark"] .card {
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.5);
+}
+
 .external-link:after,
 .child-external-link span.menu-item__name:after {
   background-image: url("data:image/svg+xml,%3Csvg width='10' height='10' viewBox='0 0 10 10' fill='transparent' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m1 8.778 6.667-6.666M1 1h8v8' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E") !important;
